--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,18 @@
+production:
+  clients:
+    default:
+     # The standard MongoDB connection URI allows for easy
+     # replica set connection setup.
+     # Use environment variables or a config file to keep your
+     # credentials safe e.g. <%= ENV['MONGOLAB_URI'] %>.
+     uri: <%= ENV['MONGOLAB_URI'] %>
+
+     options:
+       # The default timeout is 5, which is the time in seconds
+       # for a connection to time out.
+       # We recommend 15 because it allows for plenty of time
+       # in most operating environments.
+       connect_timeout: 15
 development:
   # Configure available database clients. (required)
   clients:
